# marketplace-service

./: .env  .gitignore  Makefile  README.md  docker-compose.yml
webapp/: production.Dockerfile  pyproject.toml
webapp/item/: models.py  serializers.py  tests.py  views.py
webapp/item/migrations/: 0001_initial.py  0002_product_state.py  0003_product_owner.py
webapp/marketplace/: urls.py
webapp/marketplace/celery/: celery.py
webapp/marketplace/common/management/commands/: runcelery.py  runcelerybeat.py
webapp/marketplace/common/templates/: default_urlconf.html
webapp/settings/: dev.py
